kubernetes/apps/plane/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plane
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "plane.k8s.local"
  rules:
    - backendRefs:
        - name: plane-proxy
          port: 80
